--- a/templates/table.html
+++ b/templates/table.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         <table class = "asintable">
-            <tr>
+            <tr class = "row">
                 <th>Asin</th>
             </tr> 
             {% for asin in table %}
-            <tr>
+            <tr class = "row">
                 <td>{{asin}}</td>
             </tr>
             {% endfor %}
